# primality

./: .gitignore  README.md  black_box_prime_nn.py  fetch_grfp_awardees.py  prime_nn.py  pyproject.toml  torch_black_box_prime_nn.py
.github/workflows/: grfp-2026-watch.yml
artifacts/: black_box_u64_metrics.json  black_box_u64_model.npz  metrics.json  prime_mlp.json  torch_black_box_u64_metrics.json
