[project]
name = "primality-nn"
version = "0.1.0"
description = "Neural-network demos for bounded-range and black-box primality classification."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=2.4", "torch>=2.11"]

[tool.setuptools]
py-modules = ["prime_nn", "black_box_prime_nn", "torch_black_box_prime_nn"]
